[gd_scene load_steps=5 format=3 uid="uid://cwakr1joaem2j"]

[ext_resource type="Script" path="res://Scripts/WorldScripts/dungeon_ui.gd" id="1_wy0uv"]
[ext_resource type="StyleBox" uid="uid://jqa8dgagawo1" path="res://Resources/SkillBarBoxStyle.tres" id="2_0cgky"]
[ext_resource type="PackedScene" uid="uid://dkaqqpg8dxhsq" path="res://Scenes/UI/skill_bar_box.tscn" id="3_j24mf"]
[ext_resource type="PackedScene" uid="uid://bbx4lxn5g5ryb" path="res://Scenes/UI/basic_log.tscn" id="4_e6hou"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_wy0uv")

[node name="MainMargin" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="LookPanel" type="PanelContainer" parent="MainMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0cgky")

[node name="Margin" type="MarginContainer" parent="MainMargin/LookPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Hbox" type="VBoxContainer" parent="MainMargin/LookPanel/Margin"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="MainMargin/LookPanel/Margin/Hbox"]
layout_mode = 2
text = "Input Mode"

[node name="LookLabel" type="Label" parent="MainMargin/LookPanel/Margin/Hbox"]
layout_mode = 2

[node name="LookLabel2" type="Label" parent="MainMargin/LookPanel/Margin/Hbox"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -50.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 15

[node name="SkillBar" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SkillBarBox" parent="Margin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="SkillBarBox2" parent="Margin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="SkillBarBox3" parent="Margin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="SkillBarBox4" parent="Margin/SkillBar" instance=ExtResource("3_j24mf")]
layout_mode = 2

[node name="Margin2" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="LogPanel" type="PanelContainer" parent="Margin2"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0cgky")

[node name="MarginContainer" type="MarginContainer" parent="Margin2/LogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CombatLog" parent="Margin2/LogPanel/MarginContainer" instance=ExtResource("4_e6hou")]
layout_mode = 2
